--- a/src/views/_sponsors-grid.html
+++ b/src/views/_sponsors-grid.html
@@ -1,17 +1,1 @@
-<div class="grid sponsors-grid sponsors-grid--cypress">
-  <h1 class="banner banner--dark banner--cypress">Cypress Level</h1>
-  <a target="_blank" href="https://www.infotechfl.com/"><img src="assets/images/sponsors/infotech.png" alt="Info Tech"></a>
-  <a target="_blank" href="http://sharpspring.com/"><img src="assets/images/sponsors/sharpspring.png" alt="Sharpspring"></a>
-  <a target="_blank" href="http://floridainnovationhub.ufl.edu/"><img src="assets/images/sponsors/uf-innovate.png" alt="UF Innovate | The Hub"></a>
-</div>
-<div class="grid sponsors-grid sponsors-grid--sapling">
-  <h1 class="banner banner--light banner--sapling">Sapling Level</h1>
-  <a target="_blank" href="https://www.352inc.com/"><img src="assets/images/sponsors/352.png" alt="352"></a>
-  <a target="_blank" href="https://www.itpro.tv/"><img src="assets/images/sponsors/itProTv.png" alt="IT Pro TV"></a>
-  <a target="_blank" href="https://www.infiniteenergy.com/"><img src="assets/images/sponsors/infinite-energy.png" alt="Infinite Energy"></a>
-    <a target="_blank" href="https://fractureme.com/"><img src="assets/images/sponsors/fracture.png" alt="fracture"></a>
-</div>
-<div class="grid sponsors-grid sponsors-grid--seedling">
-  <h1 class="banner banner--light banner--seedling">Seedling Level</h1>
-  <a target="_blank" href="https://www.panerabread.com/en-us/home.html"><img src="assets/images/sponsors/panera.png" alt="Panera Bread"></a>
-</div>
+<p>Coming soon.</p>
