--- a/src/views/sponsors.tpl.html
+++ b/src/views/sponsors.tpl.html
@@ -6,9 +6,7 @@
   <body>
     @@include('_header.html')
     <section class="content container container--small">
-      <h1 class="banner">Thank you to our sponsors!</h1><br>
-      <a href="/prospectus.html" class="button">Sponsor Barcamp!</a>
-      @@include('_sponsors-grid.html')
+     <p>Coming soon.</p>
     </section>
     @@include('_footer.html')
   </body>
