Added animation to theme select list.

--- a/src/views/index.tpl.html
+++ b/src/views/index.tpl.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <meta property="og:title" content=">BarCamp GNV 2019 | Saturday, April 6th, 2019">
-    <meta property="og:description" content="BarCamp GNV is an “unconference” – Sessions are created collaboratively, built the attendees who have a topic, story, knowledge, or experience to share with the rest of the community.">
+    <meta property="og:description" content="BarCamp GNV is an unconference – Sessions are created collaboratively, built the attendees who have a topic, story, knowledge, or experience to share with the rest of the community.">
     <meta property="og:image" content="http://gainesvillebarcamp.com/assets/images/social-thumbnail.jpg">
     <meta property="og:url" content="http://gainesvillebarcamp.com/index.html">
     <meta name="twitter:card" content="summary_large_image">
@@ -42,6 +42,12 @@
         </div>
     </div> -->
     <div class="container">
+      <ul class="themes">
+        <li><a href="#/" class="cotton-candy" onclick="setTheme('cotton-candy')">cotton candy theme</a></li>
+        <li><a href="#/" class="sunset" onclick="setTheme('sunset')">sunset theme</a></li>
+        <li><a href="#/" class="mist" onclick="setTheme('mist')">mist theme</a></li>
+        <li><a href="#/" class="teen-party" onclick="setTheme('teen-party')">teen party</a></li>
+      </ul>
       <header class="hero">
         <a href="/" class="logo">BarCamp GNV</a>
         <h1>
@@ -57,7 +63,7 @@
           Register now
         </a>
         <small>
-          BarCamp is FREE to attend, however your RSVP is really important 
+          BarCamp is FREE to attend, but your RSVP is really important 
           so we can purchase enough food and t-shirts!
         </small> 
         <div class="photo photo--hero"></div>
@@ -71,7 +77,7 @@
       <div class="what-is-barcamp--right">
         <h2>What is BarCamp GNV?</h2>
         <p>
-          BarCamp GNV is an “unconference” – an 
+          BarCamp GNV is an unconference – an 
           ad-hoc gathering born from the desire for 
           people to share and learn in an open environment.
         </p>
@@ -90,11 +96,10 @@
           talk planned, you can post it to that board starting at 8:00am.
         </p>
         <p>
-          Simply grab a sticky write your name and a short description of 
-          the talk then, post it to the schedule. As the board fills up, 
-          attendees can start to see what’s happening and when – and plan 
-          their day. Attendees will be able to sign up to present up until 
-          the last slot is full. 
+          Grab a sticky, write your name and a short description of 
+          the talk, and post it to the schedule. As the board fills up, 
+          attendees can start to see what's happening and when – and plan 
+          their day. You can sign up to present until the last slot is filled. 
         </p>
       </div>
       <div class="how-does-it-work--right">
@@ -106,7 +111,7 @@
           panel, or discussion group.
         </p>
         <p>
-          As an ice breaker we’ll seed the schedule with 5 - 10 featured 
+          As an ice breaker, we’ll seed the schedule with 5 - 10 featured 
           sessions, just to get the ball rolling. Intrested in being a 
           featured speaker? <a href="https://www.eventbrite.com/e/gainesville-barcamp-2019-tickets-56538256447">Register</a> and select, speaker ticket.
         </p>
@@ -155,7 +160,7 @@
                 Absolutely not! Many people come to BarCamp just to meet new people 
                 and listen to other folks give presentations, and that's great! 
                 We encourage people to participate however they are most comfortable. 
-                That's the beauty of the "un-conference." You can pretty much do whatever you want.
+                That's the beauty of the unconference. You can pretty much do whatever you want.
               </p>
             </li>
           </ul>
@@ -164,7 +169,7 @@
               <b>What should I bring?</b>
               <p>
                 BarCamp attendees don’t need to bring anything more but themselves and 
-                a thirst for knowledge, but here are a few suggestions.
+                a thirst for knowledge, but here are a few suggestions:
                 <ul>
                   <li>Notepad, pen/pencil for taking notes and collecting autographs</li>
                   <li>Something to share with attendees (i.e. business cards)</li>
@@ -181,7 +186,7 @@
             <li>
               <b>Can I give a sales presentation?</b>
               <p>
-                Nope. To be respectful of our BarCamp attendees, sales presentations or all-out sales 
+                Nope. To be respectful of our BarCamp attendees, sales presentations, or all-out sales 
                 pitches are not allowed. Don’t even try it, folks.
               </p>
             </li>
@@ -241,7 +246,7 @@
             <li class="column">
               <b>Creative</b>
               <p>
-                Pushing film beyond it's limit's, Sketch pro tips, 
+                Pushing film beyond its limit's, Sketch pro tips, 
                 building strong brands. This is the track for you to share your creative ideas. 
               </p> 
             </li>
@@ -255,7 +260,7 @@
             <li class="column">
               <b>Kitchen Sink</b>
               <p>
-                La vie sous vide, BBQ competitions, Upcycled Precussion. 
+                La vie sous vide, BBQ competitions, Upcycled Percussion. 
                 This track is for all those passions that don't quite fit...the other tracks.
               </p> 
             </li>
@@ -456,12 +461,6 @@
         </div>
       </footer>
     </div>
-    <ul class="themes">
-      <li><a href="#/" class="cotton-candy" onclick="setTheme('cotton-candy')">cotton candy theme</a></li>
-      <li><a href="#/" class="sunset" onclick="setTheme('sunset')">sunset theme</a></li>
-      <li><a href="#/" class="mist" onclick="setTheme('mist')">mist theme</a></li>
-      <li><a href="#/" class="teen-party" onclick="setTheme('teen-party')">teen party</a></li>
-    </ul>
     <script type="text/javascript">
       var body = document.body;
 
