--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -38,6 +38,7 @@ Grid
 -------------------------------*/
 
 .container {
+  position: relative;
   margin: 0 auto;
   width: 100%;
   max-width: 1440px;
@@ -819,11 +820,21 @@ Miscellaneous
 Themes
 -------------------------------*/
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  
+  to {
+    opacity: 1;
+  }
+}
+
 ul.themes {
   z-index: 1000;
-  position: fixed;
-  top: $base-unit*10;
-  right: $base-unit;
+  position: absolute;
+  top: $base-unit*6;
+  left: $base-unit*2;
   padding: 0;
   margin: 0;
 
@@ -838,11 +849,34 @@ ul.themes {
   li {
     display: block;
     margin: $base-unit/2 0;
+    opacity: 0;
+    animation-name: fadeIn;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    transition: all .25s ease-in-out;
+
+    &:hover {
+      transform: scale(1.25);
+    }
 
     &:first-child {
       margin-top: 0;
+      animation-delay: 0s;
     }
 
+    &:nth-child(2) {
+      animation-delay: .25s;
+    }
+    
+    &:nth-child(3) {
+      animation-delay: .5s;
+    }
+    
+    &:nth-child(4) {
+      animation-delay: .75s;
+    }
+    
     a {
       position: relative;
       display: inline-block;
@@ -901,6 +935,8 @@ ul.themes {
     }
   }
 }
+
+
 
 
 body.cotton-candy {
