--- a/src/views/index.tpl.html
+++ b/src/views/index.tpl.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content=">BarCamp GNV 2019 | Saturday, April 6th, 2019">
     <meta property="og:description" content="BarCamp GNV is an unconference – Sessions are created collaboratively, built the attendees who have a topic, story, knowledge, or experience to share with the rest of the community.">
     <meta property="og:image" content="http://gainesvillebarcamp.com/assets/images/social-thumbnail.jpg">
@@ -56,16 +56,16 @@
         </h1>
         <p>
           Join us for the 5th annual BarCamp GNV,
-          as we celebrate five years of knowledge sharing, 
+          as we celebrate five years of knowledge sharing,
           community building, and networking.
         </p>
         <a href="https://www.eventbrite.com/e/gainesville-barcamp-2019-tickets-56538256447" class="btn" target="_blank">
           Register now
         </a>
         <small>
-          BarCamp is FREE to attend, but your RSVP is really important 
+          BarCamp is FREE to attend, but your RSVP is really important
           so we can purchase enough food and t-shirts!
-        </small> 
+        </small>
         <div class="photo photo--hero"></div>
       </header>
       <div class="what-is-barcamp--left">
@@ -77,42 +77,42 @@
       <div class="what-is-barcamp--right">
         <h2>What is BarCamp GNV?</h2>
         <p>
-          BarCamp GNV is an unconference – an 
-          ad-hoc gathering born from the desire for 
+          BarCamp GNV is an unconference – an
+          ad-hoc gathering born from the desire for
           people to share and learn in an open environment.
         </p>
         <p>
-          Sessions are given on a variety of topics, and 
-          the day is created collaboratively – built by 
-          you and the other attendees who have a topic, story, 
+          Sessions are given on a variety of topics, and
+          the day is created collaboratively – built by
+          you and the other attendees who have a topic, story,
           knowledge, or experience to share with the rest of the community.
         </p>
       </div>
       <div class="how-does-it-work--left">
         <h2>How does it work?</h2>
         <p>
-          When you arrive, you’ll see a big board with an empty grid with 
-          times along one side and 4 rooms across the top. If you have a 
+          When you arrive, you’ll see a big board with an empty grid with
+          times along one side and 4 rooms across the top. If you have a
           talk planned, you can post it to that board starting at 8:00am.
         </p>
         <p>
-          Grab a sticky, write your name and a short description of 
-          the talk, and post it to the schedule. As the board fills up, 
-          attendees can start to see what's happening and when – and plan 
-          their day. You can sign up to present until the last slot is filled. 
+          Grab a sticky, write your name and a short description of
+          the talk, and post it to the schedule. As the board fills up,
+          attendees can start to see what's happening and when – and plan
+          their day. You can sign up to present until the last slot is filled.
         </p>
       </div>
       <div class="how-does-it-work--right">
         <h2>Can I give a talk?</h2>
         <p>
-          Yes! We encourage any attendee interested in giving a talk to post 
-          their topic on the board, but it is not required. Remember, 
-          sessions aren't limited to just "talks," it can be a presentation, 
+          Yes! We encourage any attendee interested in giving a talk to post
+          their topic on the board, but it is not required. Remember,
+          sessions aren't limited to just "talks," it can be a presentation,
           panel, or discussion group.
         </p>
         <p>
-          As an ice breaker, we’ll seed the schedule with 5 - 10 featured 
-          sessions, just to get the ball rolling. Intrested in being a 
+          As an ice breaker, we’ll seed the schedule with 5 - 10 featured
+          sessions, just to get the ball rolling. Intrested in being a
           featured speaker? <a href="https://www.eventbrite.com/e/gainesville-barcamp-2019-tickets-56538256447">Register</a> and select, speaker ticket.
         </p>
       </div>
@@ -123,43 +123,43 @@
             <li>
               <b>Does BarCamp have something to do with bars or camping?</b>
               <p>
-                Nope, it doesn't. The "BarCamp" name arose as an open to the 
-                public alternative to Foo Camp, which is an invitation-only conference. 
+                Nope, it doesn't. The "BarCamp" name arose as an open to the
+                public alternative to Foo Camp, which is an invitation-only conference.
                 Under 21 are welcome, and please don't bring your tents!
               </p>
             </li>
             <li>
               <b>What is the cost to attend?</b>
               <p>
-                Nothing! BarCamp is completely free and open to the public. 
+                Nothing! BarCamp is completely free and open to the public.
                 Invite all your friends and share the experience with them!
               </p>
             </li>
             <li>
               <b>What will the session topics be?</b>
               <p>
-                The majority of sessions are not prearranged. 
-                Attendees propose their own session ideas on the day of the event, 
-                and the schedules are updated throughout the day to make sure 
-                the most popular sessions get the largest rooms. 
-                Although topics should lean heavily to a tech and creative audience, 
-                one of the most fun parts of BarCamps are the ‘kitchen sink’ 
+                The majority of sessions are not prearranged.
+                Attendees propose their own session ideas on the day of the event,
+                and the schedules are updated throughout the day to make sure
+                the most popular sessions get the largest rooms.
+                Although topics should lean heavily to a tech and creative audience,
+                one of the most fun parts of BarCamps are the ‘kitchen sink’
                 talks like ‘How to roast your own coffee’ or ‘Lockpicking’.
               </p>
             </li>
             <li>
               <b>How long are the talks?</b>
               <p>
-                The schedule allots 30 minutes for each session but you 
+                The schedule allots 30 minutes for each session but you
                 should leave some room for Q&A afterwards and travel time between sessions.
               </p>
             </li>
             <li>
               <b>Do I have to give a talk?</b>
               <p>
-                Absolutely not! Many people come to BarCamp just to meet new people 
-                and listen to other folks give presentations, and that's great! 
-                We encourage people to participate however they are most comfortable. 
+                Absolutely not! Many people come to BarCamp just to meet new people
+                and listen to other folks give presentations, and that's great!
+                We encourage people to participate however they are most comfortable.
                 That's the beauty of the unconference. You can pretty much do whatever you want.
               </p>
             </li>
@@ -168,7 +168,7 @@
             <li>
               <b>What should I bring?</b>
               <p>
-                BarCamp attendees don’t need to bring anything more but themselves and 
+                BarCamp attendees don’t need to bring anything more but themselves and
                 a thirst for knowledge, but here are a few suggestions:
                 <ul>
                   <li>Notepad, pen/pencil for taking notes and collecting autographs</li>
@@ -186,15 +186,15 @@
             <li>
               <b>Can I give a sales presentation?</b>
               <p>
-                Nope. To be respectful of our BarCamp attendees, sales presentations, or all-out sales 
+                Nope. To be respectful of our BarCamp attendees, sales presentations, or all-out sales
                 pitches are not allowed. Don’t even try it, folks.
               </p>
             </li>
             <li>
               <b>What if people walk out during a talk?</b>
               <p>
-                If a talk or discussion in one room isn’t of interest to you, 
-                feel free to walk out and join another session. 
+                If a talk or discussion in one room isn’t of interest to you,
+                feel free to walk out and join another session.
                 If you’re giving a talk, don’t worry if people do this.
               </p>
             </li>
@@ -207,16 +207,16 @@
             <li>
               <b>You didn't answer my question!</b>
               <p>
-                If you have any other questions or concerns, please feel free to contact us 
+                If you have any other questions or concerns, please feel free to contact us
                 and we will do our best to get back to you as soon as possible.
                 <br>
                 <br>
-                You can email us at <a href="mailto:gainesvillebarcamp@gmail.com">gainesvillebarcamp@gmail.com</a>. 
+                You can email us at <a href="mailto:gainesvillebarcamp@gmail.com">gainesvillebarcamp@gmail.com</a>.
                 You can also tweet us at <a href="https://twitter.com/GNVBarCamp" target="_blank">@GNVBarCamp</a>.</p>
               </p>
             </li>
           </ul>
-        </div>  
+        </div>
       </div>
       <div class="where-is-barcamp">
         <div class="location">
@@ -238,31 +238,31 @@
             <li class="column">
               <b>Entrepreneur</b>
               <p>
-                This is a great track to talk about staying scrappy, 
-                your setbacks, or successes — tell us about your journey 
+                This is a great track to talk about staying scrappy,
+                your setbacks, or successes — tell us about your journey
                 to owning your own work.
-              </p> 
+              </p>
             </li>
             <li class="column">
               <b>Creative</b>
               <p>
-                Pushing film beyond its limit's, Sketch pro tips, 
-                building strong brands. This is the track for you to share your creative ideas. 
-              </p> 
+                Pushing film beyond its limit's, Sketch pro tips,
+                building strong brands. This is the track for you to share your creative ideas.
+              </p>
             </li>
             <li class="column">
               <b>Technology</b>
               <p>
                 Expanding Your Command Line Toolbox, The Physical Web, IoT.
                 Use this track to talk about the hardware and software that you love to geek out with.
-              </p> 
+              </p>
             </li>
             <li class="column">
               <b>Kitchen Sink</b>
               <p>
-                La vie sous vide, BBQ competitions, Upcycled Percussion. 
+                La vie sous vide, BBQ competitions, Upcycled Percussion.
                 This track is for all those passions that don't quite fit...the other tracks.
-              </p> 
+              </p>
             </li>
           </ul>
         </section>
@@ -275,7 +275,7 @@
           <tbody>
             <tr>
               <td>Time</td>
-              <td>Event</td> 
+              <td>Event</td>
             </tr>
             <tr>
               <td>
@@ -284,28 +284,28 @@
               <td>
                 Registration and session building
                 <small>
-                  Start your day by grabbing your t-shirt and filling out your 
-                  badge. Next, head over to the food table for some coffee and a 
-                  light breakfast. Finally, head to the board to post your talk, 
-                  or just mingle with your fellow BarCampers and watch the 
-                  schedule fill up. 
+                  Start your day by grabbing your t-shirt and filling out your
+                  badge. Next, head over to the food table for some coffee and a
+                  light breakfast. Finally, head to the board to post your talk,
+                  or just mingle with your fellow BarCampers and watch the
+                  schedule fill up.
                 </small>
               </td>
             </tr>
             <tr>
               <td>
-                9:00am – 9:30am              
+                9:00am – 9:30am
               </td>
               <td>
                 Welcome and opening remarks
                 <small>
-                  We’ll lay some ground rules for the day, so you’ll know what to expect before talks begin.                 
+                  We’ll lay some ground rules for the day, so you’ll know what to expect before talks begin.
                 </small>
               </td>
             </tr>
             <tr>
               <td>
-                9:30am – 12:00pm	                 
+                9:30am – 12:00pm
               </td>
               <td>
                 Morning sessions
@@ -321,13 +321,13 @@
             </tr>
             <tr>
               <td>
-                12:00pm – 1:00pm	                  
+                12:00pm – 1:00pm
               </td>
               <td>
                 Lunch
                 <small>
                   Food and drinks will be provided.
-                </small>     
+                </small>
               </td>
             </tr>
             <tr>
@@ -360,7 +360,7 @@
             </tr>
             <tr>
               <td>
-                5:00pm – 5:30pm                
+                5:00pm – 5:30pm
               </td>
               <td>
                 Closing remarks
@@ -390,7 +390,7 @@
       <div class="our-sponsors">
         <h2>Sponsors</h2>
         <p>
-          The sponsors below make BarCamp GNV possible. We can’t thank them enough. 
+          The sponsors below make BarCamp GNV possible. We can’t thank them enough.
           Be sure to show them some love if you see them around.
         </p>
         <ul>
@@ -440,7 +440,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="24" viewBox="0 0 14 24">
                   <path fill="#FFF" d="M17.9993368,4.17284211 L13.9991474,4.17284211 C13.5269765,4.17284211 12.9997632,4.764 12.9997632,5.55726316 L12.9997632,8.30715789 L17.9993368,8.30715789 L17.9993368,12.2273684 L12.9997632,12.2273684 L12.9997632,24 L8.27871726,24 L8.27871726,12.2273684 L4,12.2273684 L4,8.30715789 L8.27871726,8.30715789 L8.27871726,6.00063158 C8.27871726,2.69178947 10.6912984,0 13.9998105,0 L18,0 L18,4.17347368 L17.9993368,4.17284211 Z" transform="translate(-4)"/>
                 </svg>
-              </a>              
+              </a>
             </li>
             <li>
               <a href="mailto:gainesvillebarcamp@gmail.com" class="__web-inspector-hide-shortcut__">
@@ -453,9 +453,9 @@
         </div>
         <div class="column">
           <p>
-            &copy; 2019 BarCamp GNV. 
+            &copy; 2019 BarCamp GNV.
             Please see our <a href="https://docs.google.com/document/d/1iapQQQDFbCJYkFE-RAnpqgp3rvUUM-cZtT8_6Y8OAoU/edit?usp=sharing" target="_blank">Code of Conduct</a>.<br>
-            <a href="mailto:gainesvillebarcamp@gmail.com">Contact Us</a> if you want to hang out sometime. 
+            <a href="mailto:gainesvillebarcamp@gmail.com">Contact Us</a> if you want to hang out sometime.
             Checkout the 2018 site <a target="_blank" href="http://2018.gainesvillebarcamp.com">here</a>.
           </p>
         </div>
@@ -469,7 +469,6 @@
         body.classList.add(theme);
         return false;
       }
-    </script> 
+    </script>
   </body>
 </html>
-
