--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -45,6 +45,7 @@ a {
   transition: color .2s ease;
   text-decoration: none;
   z-index: 100;
+  transition: all .5s ease-in-out;
   
   &:hover {
     color: #fff;
