Fix for FB sharing.

--- a/src/views/index.tpl.html
+++ b/src/views/index.tpl.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:url" content="http://gainesvillebarcamp.com/">
+    <meta property="og:type" content="website">
     <meta property="og:title" content=">BarCamp GNV 2019 | Saturday, April 6th, 2019">
-    <meta property="og:description" content="BarCamp GNV is an unconference – Sessions are created collaboratively, built the attendees who have a topic, story, knowledge, or experience to share with the rest of the community.">
-    <meta property="og:image" content="http://gainesvillebarcamp.com/assets/images/social-thumbnail.jpg">
-    <meta property="og:url" content="http://gainesvillebarcamp.com/index.html">
+    <meta property="og:image" content="http://gainesvillebarcamp.com/images/barcamp-share-image.jpg">
+    <meta property="og:description" content="BarCamp is a chance to network, learn something new, and communicate what you're most passionate about. Come one, come all. No boring talks to sift through in order to get to the good ones; the power is totally in your hands to hear what you're interested in!">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="BarCamp GNV 2019">
     <meta name="twitter:image:alt" content="BarCamp GNV 2019 | Saturday, April 6th, 2019">
+    <meta name="theme-color" content="#cc208e" />
     <title>BarCamp GNV 2019 | Saturday, April 6th, 2019</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/main.min.css">
