--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -907,25 +907,25 @@ Themes
 ul.themes {
   z-index: 1000;
   position: fixed;
-  top: 70px;
+  top: 80px;
   left: 0;
+  vertical-align: top;
+  height: auto;
+  width: auto;
+  line-height: 1;
+  font-size: 0!important;
   padding: $base-unit;
   margin: 0;
+  text-align: center;
   background: barcamp-color('midnight');
   box-shadow: 0 $base-unit/2 $base-unit*2 0 rgba(42,56,57,0.15);
 
-  @media screen and (min-width: 1440px) {
-    left: calc(50% - 720px);
-  }
-
-  @media only screen and (max-width: 600px) {
-    display: none;
-  }
-
   li {
     display: block;
+    height: $base-unit;
+    width: $base-unit;
     padding: 0;
-    margin: $base-unit/2 0;
+    margin: $base-unit 0;
     opacity: 0;
     animation-name: fadeIn;
     animation-duration: 3s;
@@ -951,6 +951,7 @@ ul.themes {
     }
     
     &:nth-child(4) {
+      margin-bottom: 0;
       animation-delay: .75s;
     }
     
@@ -1012,6 +1013,28 @@ ul.themes {
       }
     }
   }
+
+  @media screen and (min-width: 1440px) {
+    left: calc(50% - 720px);
+  }
+
+  @media only screen and (max-width: 600px) {
+    width: auto;
+    max-width: 200px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: auto;
+    bottom: 0;
+   
+    li {
+      display: inline-block;
+      margin: 0 $base-unit/2;
+      padding: 0;
+    }
+
+  }
+
 }
 
 
