refactored foter. fixed incorrect twitter link. Fixes for open graph and schema.org

--- a/src/views/index.tpl.html
+++ b/src/views/index.tpl.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Common tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta property="og:url" content="http://gainesvillebarcamp.com/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content=">BarCamp GNV 2019 | Saturday, April 6th, 2019">
-    <meta property="og:image" content="http://gainesvillebarcamp.com/assets/images/social-share-image.jpg">
-    <meta property="og:description" content="BarCamp is a chance to network, learn something new, and communicate what you're most passionate about. Come one, come all. No boring talks to sift through in order to get to the good ones; the power is totally in your hands to hear what you're interested in!">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:site_name" content="BarCamp GNV 2019">
-    <meta name="twitter:image:alt" content="BarCamp GNV 2019 | Saturday, April 6th, 2019">
     <meta name="theme-color" content="#cc208e" />
     <title>BarCamp GNV 2019 | Saturday, April 6th, 2019</title>
+    <!-- Search Engine -->
+    <meta name="description" content="BarCamp GNV is an unconference – an ad-hoc gathering born from the desire for people to share and learn in an open environment. Sessions are given on a variety of topics, and the day is created collaboratively – built by you and the other attendees who have a topic, story, knowledge, or experience to share with the rest of the community.">
+    <meta name="image" content="http://gainesvillebarcamp.com/assets/images/social-share-image.jpg">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="BarCamp GNV 2019 | Saturday, April 6th, 2019">
+    <meta itemprop="description" content="BarCamp GNV is an unconference – an ad-hoc gathering born from the desire for people to share and learn in an open environment. Sessions are given on a variety of topics, and the day is created collaboratively – built by you and the other attendees who have a topic, story, knowledge, or experience to share with the rest of the community.">
+    <meta itemprop="image" content="http://gainesvillebarcamp.com/assets/images/social-share-image.jpg">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="BarCamp GNV 2019 | Saturday, April 6th, 2019">
+    <meta name="twitter:description" content="BarCamp GNV is an unconference – an ad-hoc gathering born from the desire for people to share and learn in an open environment. Sessions are given on a variety of topics, and the day is created collaboratively – built by you and the other attendees who have a topic, story, knowledge, or experience to share with the rest of the community.">
+    <meta name="twitter:site" content="@BarCampGNV">
+    <meta name="twitter:creator" content="@BarCampGNV">
+    <meta name="twitter:image:src" content="http://gainesvillebarcamp.com/assets/images/social-share-image.jpg">
+    <!-- Open Graph general Facebook -->
+    <meta name="og:title" content="BarCamp GNV 2019 | Saturday, April 6th, 2019">
+    <meta name="og:description" content="BarCamp GNV is an unconference – an ad-hoc gathering born from the desire for people to share and learn in an open environment. Sessions are given on a variety of topics, and the day is created collaboratively – built by you and the other attendees who have a topic, story, knowledge, or experience to share with the rest of the community.">
+    <meta name="og:image" content="http://gainesvillebarcamp.com/assets/images/social-share-image.jpg">
+    <meta name="og:url" content="http://gainesvillebarcamp.com">
+    <meta name="og:site_name" content="BarCamp GNV 2019">
+    <meta name="og:type" content="website">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/main.min.css">
   </head>
@@ -427,18 +441,17 @@
       </div>
       <footer>
       <div class="row">
-        <div class="column">
+        <div class="column column--share">
           <b>#BarCampGNV</b>
           <p>
             Share your thoughts, questions, <br>
             and experiences with your fellow BarCampers.
           </p>
         </div>
-        <div class="column">
-          <b>Connect With Us:</b>
+        <div class="column column--connect">
           <ul class="social-links">
             <li>
-              <a href="https://twitter.com/GNVBarCamp" target="_blank">
+              <a href="https://twitter.com/BarCampGNV" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="20" viewBox="0 0 24 20">
                   <path fill="#FFF" d="M24,4.36647038 C23.1163157,4.7675788 22.1677739,5.03914098 21.1712645,5.16245237 C22.1880419,4.5368895 22.9697106,3.54832006 23.3372368,2.36854867 C22.3846414,2.94838933 21.3320572,3.36681676 20.2098863,3.59404226 C19.3113388,2.61170766 18.0324288,2 16.6143452,2 C13.8950569,2 11.691251,4.25978524 11.691251,7.04814687 C11.691251,7.4437132 11.7344894,7.82888812 11.8189393,8.19882231 C7.72683256,7.98822307 4.09751154,5.97783166 1.6694066,2.92344995 C1.24648125,3.66886041 1.0025898,4.53619674 1.0025898,5.46172497 C1.0025898,7.21371666 1.87208648,8.75788015 3.19355928,9.66401108 C2.38756897,9.63699342 1.62684382,9.40976793 0.963405022,9.03152061 L0.963405022,9.09525459 C0.963405022,11.542778 2.6618624,13.5815726 4.91296025,14.046415 C4.5008445,14.1627988 4.06440716,14.2230689 3.61648463,14.2230689 C3.29895282,14.2230689 2.99087941,14.1918947 2.69023759,14.1337028 C3.31719401,16.1385521 5.13523252,17.5988916 7.29039523,17.6404572 C5.60544984,18.9941115 3.48204031,19.8018705 1.1748677,19.8018705 C0.776939534,19.8018705 0.385767369,19.7776238 0,19.7305161 C2.17880869,21.1638379 4.76635514,22 7.54779867,22 C16.6048868,22 21.5570319,14.306893 21.5570319,7.63352962 C21.5570319,7.41600277 21.5529783,7.19847593 21.5428443,6.98094908 C22.5055737,6.26740561 23.3399392,5.3785937 24,4.36577762 L24,4.36647038 Z" transform="translate(0 -2)"/>
                 </svg>
@@ -459,8 +472,6 @@
               </a>
             </li>
           </ul>
-        </div>
-        <div class="column">
           <p>
             &copy; 2019 BarCamp GNV.
             Please see our <a href="https://docs.google.com/document/d/1iapQQQDFbCJYkFE-RAnpqgp3rvUUM-cZtT8_6Y8OAoU/edit?usp=sharing" target="_blank">Code of Conduct</a>.<br>
